# vyt-vyatta-idp-snort

./: .frlog  .gitignore  COPYING  Makefile.am  README  configure.ac  gen-interface-templates.pl
debian/: README  changelog  control  copyright  lintian  rules  vyatta-idp-snort-serial.lintian-overrides  vyatta-idp-snort.install  vyatta-idp-snort.postinst.in
lib/Vyatta/Snort/: Config.pm  UnifiedLog.pm
pulledpork/: README.vyatta  pulledpork.conf  pulledpork.pl
scripts/: VyattaSnortConfig.pm  VyattaSnortUnifiedLog.pm  local.rules  snort-categories  vyatta-barn-watcher.pl  vyatta-get-snort-rules.pl  vyatta-intf-inspect.pl  vyatta-ips-update  vyatta-modify-sids.pl  vyatta-op-update-rules.pl  vyatta-proc-snort-changes  vyatta-proc-snort-rules.pl  vyatta-proc-snort-updates  vyatta-show-ips-class.pl  vyatta-show-ips.pl  vyatta-update-inspection.pl  vyatta-update-snort.pl
templates-cfg/content-inspection/: node.def
templates-cfg/content-inspection/inspect-all/: node.def
templates-cfg/content-inspection/inspect-all/.ipv6-enable/: node.def
templates-cfg/content-inspection/inspect-all/enable/: node.def
templates-cfg/content-inspection/ips/: node.def
templates-cfg/content-inspection/ips/.remote-logging/: node.def
templates-cfg/content-inspection/ips/.remote-logging/database/: node.def
templates-cfg/content-inspection/ips/.remote-logging/mysql/: node.def
templates-cfg/content-inspection/ips/actions/: node.def
templates-cfg/content-inspection/ips/actions/other/: node.def
templates-cfg/content-inspection/ips/actions/priority-1/: node.def
templates-cfg/content-inspection/ips/actions/priority-2/: node.def
templates-cfg/content-inspection/ips/actions/priority-3/: node.def
templates-cfg/content-inspection/ips/auto-update/: node.def
templates-cfg/content-inspection/ips/auto-update/oink-code/: node.def
templates-cfg/content-inspection/ips/auto-update/update-hour/: node.def
templates-cfg/content-inspection/ips/log/: node.def
templates-cfg/content-inspection/ips/log/.prelude/: node.def
templates-cfg/content-inspection/ips/log/local/: node.def
templates-cfg/content-inspection/ips/log/remote-db/: node.def
templates-cfg/content-inspection/ips/log/syslog/: node.def
templates-cfg/content-inspection/ips/modify-rules/: node.def
templates-cfg/content-inspection/ips/modify-rules/disable-sid/: node.def
templates-cfg/content-inspection/ips/modify-rules/enable-sid/: node.def
templates-cfg/content-inspection/ips/modify-rules/exclude-category/: node.def
templates-cfg/content-inspection/ips/modify-rules/external-network/: node.def
templates-cfg/content-inspection/ips/modify-rules/include-category/: node.def
templates-cfg/content-inspection/ips/modify-rules/internal-network/: node.def
templates-cfg/content-inspection/ips/modify-rules/processing-precedence/: node.def
templates-cfg/content-inspection/ips/output/.prelude/: node.def
templates-cfg/content-inspection/ips/policy/: node.def
templates-cfg/content-inspection/traffic-filter/: node.def
templates-cfg/content-inspection/traffic-filter/.ipv6-custom/: node.def
templates-cfg/content-inspection/traffic-filter/.ipv6-preset/: node.def
templates-cfg/content-inspection/traffic-filter/custom/: node.def
templates-cfg/content-inspection/traffic-filter/ipv6-custom/: node.def
templates-cfg/content-inspection/traffic-filter/ipv6-preset/: node.def
templates-cfg/content-inspection/traffic-filter/preset/: node.def
templates-cfg/idp/: node.def
templates-cfg/idp/snort/: node.def
templates-cfg/idp/snort/actions/: node.def
templates-cfg/idp/snort/actions/other/: node.def
templates-cfg/idp/snort/actions/priority-1/: node.def
templates-cfg/idp/snort/actions/priority-2/: node.def
templates-cfg/idp/snort/actions/priority-3/: node.def
templates-cfg/idp/snort/traffic-selection/: node.def
templates-cfg/idp/snort/traffic-selection/custom/: node.def
templates-op/show/ips/: node.def
templates-op/show/ips/log/: node.def
templates-op/show/ips/rules/: node.def
templates-op/show/ips/summary/: node.def
templates-op/show/ips/update-log/: node.def
templates-op/update/ips/: node.def
templates-op/update/ips/rules/: node.def
(+22 files in other folders)
